--- a/index.html
+++ b/index.html
@@ -513,7 +513,7 @@
   <section class="faq">
     <div class="faq__wrapper">
       <h2 class="faq__title">Отвечаем на частые вопросы</h2>
-      <p class="faq__desc">Если вы не нашли ответ на свой вопрос, напишите нам в чат на сайте или любым удобным способом через контакты внизу сайта</p>
+      <p class="faq__desc">Если вы не нашли ответ на свой вопрос, напишите нам в чат на сайте или свяжитесь с нами любым удобным способом через контакты внизу сайта</p>
       <div class="faq-item">
         <div class="faq-item__head">
           <div class="faq-item__title">Какие книги выпускает издательсво?</div>
