--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
       </div>
     </header>
       <div  class="main__wrapper">
-        <h1 class="main__title">Получите готовую книгу за 21 день</h1>
+        <h1 class="main__title">Получите готовую<br> книгу за 21 день</h1>
         <div class="main__gift">
           <p class="main__subtitle">Издательский пакет в подарок</p>
           <p class="main__price">3960&#8381;</p>
