--- a/index.html
+++ b/index.html
@@ -443,11 +443,34 @@
               </div>
             </div>
           </div>
-          <div>2</div>
-          <div>3</div>
-          <div>4</div>
-          <div>5</div>
-          <div>6</div>
+          <div class="reviews__item">
+            <div class="reviews__item--wrapper">
+              <div class="reviews__item--text">
+              <h3 class="reviews__item--title">Ирина Умнова-Конюхова</h3>
+              <p>Работать с ИД Академии Жуковского начала ещё в 2014 году, за это время издала у них несколько своих произведений.</p>
+              <p>Каждый мой проект является уникальным и требует подхода как ко мне так и к рукописи, издательсво при работе со мной проявило себя с лучшей стороны, сказать что они сделали все как я хотела ни сказать ни чего.</p>
+              <p>Адекватно воспринимали и оценивали критику, давали дельные советы, книги получились с «душой», качество работы и полученной продукции на высоте. У издательства есть свой интернет-магазин куда выкладываются произведения авторов, тем самым о моих книгах узнает большой круг читателей и заказать мои произведения можно со всего мира.</p>
+              <p>Рада знакомству с этой компанией и впредь надеюсь на постоянное сотрудничество.</p>
+              </div>
+              <div class="reviews__item--img">
+                <img src="img/slide-img.jpg" alt="">
+              </div>
+            </div>
+          </div>
+          <div class="reviews__item">
+            <div class="reviews__item--wrapper">
+              <div class="reviews__item--text">
+              <h3 class="reviews__item--title">Ирина Умнова-Конюхова</h3>
+              <p>Работать с ИД Академии Жуковского начала ещё в 2014 году, за это время издала у них несколько своих произведений.</p>
+              <p>Каждый мой проект является уникальным и требует подхода как ко мне так и к рукописи, издательсво при работе со мной проявило себя с лучшей стороны, сказать что они сделали все как я хотела ни сказать ни чего.</p>
+              <p>Адекватно воспринимали и оценивали критику, давали дельные советы, книги получились с «душой», качество работы и полученной продукции на высоте. У издательства есть свой интернет-магазин куда выкладываются произведения авторов, тем самым о моих книгах узнает большой круг читателей и заказать мои произведения можно со всего мира.</p>
+              <p>Рада знакомству с этой компанией и впредь надеюсь на постоянное сотрудничество.</p>
+              </div>
+              <div class="reviews__item--img">
+                <img src="img/slide-img.jpg" alt="">
+              </div>
+            </div>
+          </div>
         </div>
       </div>
     </section>
