--- a/index.html
+++ b/index.html
@@ -513,10 +513,10 @@
       <div class="about__wrapper">
         <div class="about__col">
           <h2 class="about__title">Уважаемые авторы</h2>
-          <p class="about__text">Деятельность нашего издательсва началась с момента образования Академии им. Н. Е. Жуковского. Мы менялись и росли вместе с Академией.</p>
+          <p class="about__text">Деятельность нашего издательсва началась с момента образования<br>Академии им. Н. Е. Жуковского. Мы менялись и росли вместе с Академией.</p>
           <p class="about__text">Академия была перенесена в Воронеж, но мы решили остаться и оставить её часть в Москве.</p>
-          <p class="about__text">Мы продолжаем издавать книги разных жанров, от научной литературы до стихов. Собственная производственная база даёт возможноть печать книги от 1 экземпляра и до тысячных тиражей. Наш коллектив впитал все традиции которые хранились в Академии.</p>
-          <p class="about__text">Мы продолжаем развиваться и учиться новому, приглашаем к сотрудничесву авторов, ведь бумажные книги несут в себе больше чем любая электронная книга.</p>
+          <p class="about__text">Мы продолжаем издавать книги разных жанров, от научной литературы до <br>стихов. Собственная производственная база даёт возможноть печать книги <br>от 1 экземпляра и до тысячных тиражей. Наш коллектив впитал все традиции <br>которые хранились в Академии.</p>
+          <p class="about__text">Мы продолжаем развиваться и учиться новому, приглашаем к сотрудничесву <br>авторов, ведь бумажные книги несут в себе больше чем любая электронная книга.</p>
           <div class="about__info  about__info--desc">
             <p class="about__name">Агибалов Игорь Викторович</p>
             <p class="about__position">Генеральный директор Издательского дома<br>Академии имени Н.Е. Жуковсокго</p>
