--- a/index.html
+++ b/index.html
@@ -709,6 +709,7 @@
     <form action="#" class="form-callback" method="POST" id="calculation">
             <div class="calc-form__wrapper">
               <p class="calc-form__title">Получите расчет издания книги в 3 ценовых вариантах и:</p>
+              <div class="calc-form__wrapper2">
               <ul class="form-callback__items">
                 <li class="form-callback__item">Узнайте что входит в допечатную подготовку;</li>
                 <li class="form-callback__item">Зачем нужен издательский пакет;</li>
@@ -730,6 +731,7 @@
                   <input type="submit" class="btn  btn--form" value="Получить расчет сейчас">
                 </div>
                 <p class="calc-form__subtitle">Нажимая на кнопку, Вы даете согласие на обработку персональных данных и соглашаетесь с политикой конфедициальности</p>
+                </div>
             </div>
         </form>
   </div>
