--- a/index.html
+++ b/index.html
@@ -99,16 +99,16 @@
         <div class="advantage__items">
           <h2 class="advantage__title">Ваша выгода</h2>
           <div class="advantage__item">
-            Издаваясь у нас вы экономите более <span>437 часов</span> драгоценного времени.
+            Издаваясь у нас вы<br> экономите более <span>437 часов</span> драгоценного времени.
           </div>
           <div class="advantage__item">
-            Печатаем самыми маленькими тиражами<br>от <span>1 экземпляра</span>.
+            Печатаем самыми<br> маленькими тиражами<br> от <span>1 экземпляра</span>.
           </div>
           <div class="advantage__item">
-            <span>100%</span> гарантия качества, перепечатаем брак<br>за наш счет.
+            <span>100%</span> гарантия качества, перепечатаем брак<br> за наш счет.
           </div>
           <div class="advantage__item">
-            Собственная типография в пешей доступности от<br><span>метро Петровский парк</span>.
+            Собственная типография<br> в пешей доступности от<br><span> метро Петровский парк</span>.
           </div>
           <div class="advantage__item">
             Понимаем наших авторов с полуслова, средний срок сотрудничества – <span>7лет</span>.
