--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Lato:wght@300;400;700&family=Ubuntu:wght@300;400;500&display=swap" rel="stylesheet">
     <script src="js/jquery/jquery-3.4.1.min.js"></script>
     <script src="js/slick.min.js"></script>
-    <link rel="shortcut icon" href="img/favicon.ico" type="image/png">
+    <link rel="shortcut icon" href="img/favicon.ico.png" type="image/png">
   </head>
   <body>
     <div class="preloader">
